src/css/base.css
:root {
  font-family: 'Sarabun', 'Roboto', 'Cabin' sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;

  color: #0d0b0a;
  background-color: rgba(255, 255, 255, 0.87);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}
body {
  display: flex;
  flex-direction: column;
  min-width: 100vw;
  min-height: 100vh;
  margin: 0;
}

main {
  flex-grow: 1;
}
main:has(.back-link) {
  text-align: center;
}

